chore : API setting

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
     <p class="hint">자동배포 테스트 </p>
 
     <p class="footer">
-      접속 주소 http://3.36.52.11:8080/
+      접속 주소 http://퍼블릭 IPv4 주소:8080/
     </p>
   </div>
 
